# generic-repository

./: .coveragerc  .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: devcontainer.json  postcreate
.github/workflows/: deploy.yml  tests.yml
generic_repository/: __init__.py  base.py  cached.py  composition.py  database.py  http.py  mapper.py  pydantic.py
tests/: conftest.py  factories.py  test_cache.py  test_composition.py  test_repository.py  todos.py
tests/http/: app.py  conftest.py  factories.py  schemas.py  test_http_repository.py
tests/sqlalchemy/: conftest.py  factories.py  models.py  repository.py  test_connection.py  test_repository.py  test_sqlalchemy_model_repository.py  todos.py
