[tool.poetry]
name = "generic-repository"
version = "0.1.0"
description = ""
authors = ["Francisco Del Roio <francipvb@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {version = "^1.4.0", optional = true}
pydantic = {version = "^1.9.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
SQLAlchemy = {version = "^1.4", extras = ["aiosqlite", "mypy"]}
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
autoflake = "^1.4"
isort = "^5.10.1"
pydantic = "^1.9.0"
anyio = "^3.5.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]
strict_optional = true

[tool.isort]
known_first_party = ['app']
profile = 'black'
